--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=
-ANYKERNEL_SOURCE_BRANCH=
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_CONFIG=
-BUILD_ARGS:LLVM=1 LLVM_IAS=1
+ANYKERNEL_SOURCE=https://github.com/osm0sis/AnyKernel3
+ANYKERNEL_SOURCE_BRANCH=master
+KERNEL_SOURCE=https://github.com/Mayuri-Chan/android_kernel_xiaomi_mt6765
+KERNEL_SOURCE_BRANCH=cactus-p-oss
+KERNEL_CONFIG=cactus_defconfig
+BUILD_ARGS:
